Base: Ensure that SetCurrentThreadPriority(BACKGROUND) sets CPU priority on Windows.

Previously, SetCurrentThreadPriority(BACKGROUND) did not affect CPU
priority on Windows in a IDLE process when the
"WindowsThreadModeBackground" feature was enabled. It only affected I/O
and memory priorities.

With this CL, a second call to ::SetThreadPriority() is made to
ensure that CPU priority is affected.

Bug: 901483
Change-Id: I22640c8fa56eeec489fbf0fe516359b828e39541
Reviewed-on: https://chromium-review.googlesource.com/c/1318438
Commit-Queue: François Doray <fdoray@chromium.org>
Reviewed-by: Gabriel Charette <gab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606200}
Former-commit-id: 5cb9cc29dc6efdf31814e5df7648eb2333767f5e